--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -2,11 +2,78 @@
     "title": "مرحبا بالعالم!",
     "general": {
         "shop_now": "تسوق الأن",
+        "shopping_now": "تسوق الأن",
         "view_all": "عرض الكل",
-        "close": "إغلاق"
+        "close": "إغلاق",
+        "save_changes": "حفظ التغيرات",
+        "save": "حفظ",
+        "add_to_cart": "إضافة إلي العربة",
+        "add": "إضافة",
+        "add_now": "إضافة الأن",
+        "checkout": "الدفع",
+        "continue_shopping": "أكمل التسوق",
+        "add_new_address": "أضافة عنوان جديد",
+        "login": "تسجيل الدخول",
+        "logout": "تسجيل الخروج",
+        "signup": "تسجيل",
+        "signup_new": "إنشاء حساب جديد",
+        "create_new_account": "إنشاء حساب جديد",
+        "do_you_have_an_account": "هل لديك حساب بالفعل؟",
+        "login_now": "تسجيل الدخول الأن",
+        "lost_your_password": "نسيت كلمة المرور؟",
+        "login_msg": "تم تسجيل الدخول بنجاح!",
+        "logout_msg": "تم تسجيل الخروج بنجاح!",
+        "profile_img_msg": "لم يتم رفع صورة الملف الشخصي",
+        "signup_msg": "تم انشاء الحساب بنجاح",
+        "signup_error_msg": "هناك خطأ ما! لم يتم انشاء الحساب",
+        "profile_img": "صورة الملف الشخصى",
+        "hello": "مرحبا",
+        "my_account": "حسابى",
+        "login_register": "دخول/تسجيل",
+        "my_profile": "الحساب",
+        "my_orders": "الطلبات",
+        "my_addresses": "العناووين",
+        "filters": "المرشحات",
+        "filter_category": "التصنيف",
+        "filter_color": "اللون",
+        "filter_price": "السعر",
+        "filters_to": "إلى",
+        "filters_btn": "تحديد",
+        "login_page_title": "تسجيل الدخول",
+        "signup_page_title": "انشاء حساب جديد",
+        "shop_page_title": "المتجر"
     },
     "placeholder": {
-        "search": "أنا أتسوق لأجل..."
+        "search": "أنا أتسوق لأجل...",
+        "email": "البريد الإلكتروني",
+        "username": "أسم المستخدم",
+        "password": "كلمة المرور",
+        "first_name": "الاسم الاول",
+        "last_name": "الاسم الاخير",
+        "country": "الدولة",
+        "address": "العنوان",
+        "address2": "الشقة , السويت,الخ.. (أختيارى)",
+        "city": "المدينة",
+        "governorate": "المحافظة",
+        "postal_code": "الرمز البريدى (أختيارى)",
+        "phone_number": "رقم الموبايل",
+        "card_name": "اسم البطاقة (أخنيارى)",
+        "card_number": "رقم البطاقة",
+        "expiration_date": "تاريخ الأنتهاء(شهر/سنة)",
+        "cvv": "الرقم السرى(CVV)"
+    },
+    "required": {
+        "email": "برجاء ادخال البريد الالكترونى",
+        "username": "برجاء ادخال اسم المستخدم",
+        "first_name": "برجاء ادخال الاسم الاول",
+        "last_name": "برجاء ادخال الاسم الاخير",
+        "password": "برجاء ادخال كلمة المرور",
+        "address": "برجاء ادخال عنوانك",
+        "city": "برجاء ادخال المدينة",
+        "governorate": "برجاء ادخال المحافظة",
+        "phone_number": "برجاء ادخال رقم الهاتف",
+        "min_3": "الحد الادنى للطول هو 3",
+        "max_15": "الحد الاقصى للطول هو 15"
     },
     "hero": {
         "hero_subtitle": "الشحن المجاني لطلب حتي 120$",
@@ -48,7 +115,7 @@
         "title": "الاشتراك في النشرة الإخبارية",
         "desc": "اشترك في النشرة الإخبارية الأسبوعية للحصول على آخر التحديثات",
         "email": "بريدك الإلكتروني",
-        "submit": "تسجيل"
+        "submit": "أشتراك"
     },
     "footer": {
         "m1_title": "منطقة العملاء",
@@ -68,5 +135,73 @@
         "payments_lable": "نحن نقبل بطاقات الائتمان",
         "copy_right": "جميع الحقوق محفوظة",
         "made_by": "صنع بواسطة"
+    },
+    "account": {
+        "title": "الحساب",
+        "nav_title": "لوحة التحكم",
+        "wishlist": "قائمة الرغبات",
+        "no_orders_added_to_wishlist": "لم يتم اضافة منتجات بعد",
+        "addresses": "عناوين الشحن",
+        "primary_address": "العنوان الأساسى",
+        "edit_your_account_information": "تعديل بيانات الحساب",
+        "orders": "الطلبات",
+        "orders2": "طلبات",
+        "placed_in_past_months": "تمت في الأشهر الماضية",
+        "no_orders_yet": "لا يوجد طلبات بعد!",
+        "make_your_first_order": "أطلب الأن",
+        "order_number": "رقم الطلب",
+        "view_details": "عرض التفاصيل",
+        "order_placed": "تم تقديم الطلب",
+        "total": "الإجمالى",
+        "ship_to": "يشحن إلى",
+        "phone": "الهاتف",
+        "order_items": "محتوى الطلب",
+        "order_track": "تتبع الطلب"
+    },
+    "cart": {
+        "title": "عربة التسوق",
+        "subtotal": "المجموع الفرعى",
+        "empty_cart_msg": "عربة التسوق فارغه الأن",
+        "tax": "شامل الضريبة. الشحن يحسب عند الدفع"
+    },
+    "checkout": {
+        "title": "عملية الشراء",
+        "information": "المعلومات",
+        "shipping": "عنوان الشحن",
+        "payment": "عملية الدفع",
+        "subtotal": "المجموع الفرعى",
+        "total": "إجمالى المبلغ",
+        "show_order_summary": "عرض ملخص الطلب",
+        "hide_order_summary": "إخفاء ملخص الطلب",
+        "contact": "التواصل من خلال",
+        "ship_to": "يشحن إلى",
+        "contact_information": "معلومات الاتصال",
+        "email": "البريد الالكترونى",
+        "shipping_addres": "عنوان الشحن",
+        "primary_address": "قم بتعينه كعنوان الشحن الاساسى",
+        "shipping_method": "طريقة الشحن",
+        "basic_shipping": "الشحن العادى",
+        "free": "مجانى",
+        "Premium_shipping": "الشحن الممتاز مع التتبع",
+        "choose_payment_method": "اختر وسيلة الدفع",
+        "pay_with": "ادفع بواسطة",
+        "or": "أو",
+        "enter_your_Credit_Card_details": "أدخل تفاصيل بطاقة الائتمان الخاصة بك",
+        "Your_transaction_is_secured_with_ssl_certificate": "معاملتك مضمونة بشهادة SSL",
+        "you_will_pay": "سوف تدفع",
+        "oredr_total": "إجمالى المبلغ",
+        "pay_with_cash": "الدفع عند الاستلام",
+        "pay_with_cash_content": "اطلب الآن وادفع نقدًا لاحقًا!",
+        "return_to_information": "رجوع إلى المعلومات",
+        "continue_to_payment": "الأستمرار إلى الدفع",
+        "return_to_cart": "رجوع إلى عربة التسوق",
+        "continue_to_shipping": "الأستمرار إلى الشحن",
+        "return_to_shipping": "رجوع إلى الشحن",
+        "complete_order": "إدفع الأن"
+    },
+    "notFound": {
+        "404_title": "معذرةً , الصفحة غير موجودة!",
+        "404_desc": "معذرةً ، لم نتمكن من العثور على الصفحة التي تبحث عنها. ربما أخطأت في كتابة URL",
+        "404_button": "رجوع إلي الصفحة الرئيسية"
     }
 }
