--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,12 +1,79 @@
 {
-    "title": "hello world!",
+    "title": "",
     "general": {
         "shop_now": "shop now",
+        "shopping_now": "shopping now",
         "view_all": "view all",
-        "close": "close"
+        "close": "close",
+        "save_changes": "Save Changes",
+        "save": "Save",
+        "add_to_cart": "add to cart",
+        "add": "add",
+        "add_now": "add now",
+        "checkout": "checkout",
+        "continue_shopping": "continue shopping",
+        "add_new_address": "Add anew address",
+        "login": "login",
+        "logout": "logout",
+        "signup": "signup",
+        "signup_new": "signup",
+        "create_new_account": "Create new account",
+        "do_you_have_an_account": "Do you have an account?",
+        "login_now": "Login now",
+        "lost_your_password": "Lost your password?",
+        "login_msg": "logged in successfully!",
+        "logout_msg": "logged out successfully!",
+        "profile_img_msg": "profile image not uoploaded",
+        "signup_msg": "account created successfully",
+        "signup_error_msg": "something went wrong!",
+        "profile_img": "Profile Photo",
+        "hello": "Hello",
+        "my_account": "My Account",
+        "login_register": "login/register",
+        "my_profile": "My profile",
+        "my_orders": "My Orders",
+        "my_addresses": "My Addresses",
+        "filters": "filters",
+        "filter_category": "Category",
+        "filter_color": "Color",
+        "filter_price": "Price",
+        "filters_to": "to",
+        "filters_btn": "go",
+        "login_page_title": "login",
+        "signup_page_title": "signup",
+        "shop_page_title": "shop"
     },
     "placeholder": {
-        "search": "I am shopping for..."
+        "search": "I am shopping for...",
+        "email": "Email",
+        "username": "Username",
+        "password": "Password",
+        "first_name": "first name",
+        "last_name": "last name",
+        "country": "country",
+        "address": "address",
+        "address2": "apartment, suite, etc. (optional)",
+        "city": "city",
+        "governorate": "governorate",
+        "postal_code": "postal code (optional)",
+        "phone_number": "phone number",
+        "card_name": "Cardholder name (optional)",
+        "card_number": "Card number",
+        "expiration_date": "Expiration date(MM/YY)",
+        "cvv": "Secrity code(Cvv)"
+    },
+    "required": {
+        "email": "Email is required",
+        "username": "username is required",
+        "first_name": "first name is required",
+        "last_name": "last name is required",
+        "password": "password is required",
+        "address": "address is required",
+        "city": "city is required",
+        "governorate": "governorate is required",
+        "phone_number": "Phone number is required",
+        "min_3": "min length is 3",
+        "max_15": "max length is 15"
     },
     "hero": {
         "hero_subtitle": "Free shipping offer order $120",
@@ -68,5 +135,73 @@
         "payments_lable": "We Accept Credit Cards",
         "copy_right": "All copyright reserved",
         "made_by": "made by"
+    },
+    "account": {
+        "title": "Account",
+        "nav_title": "Account Dashboard",
+        "wishlist": "Wishlist",
+        "no_orders_added_to_wishlist": "No orders added to Wishlist",
+        "addresses": "Addresses",
+        "primary_address": "Primary address",
+        "edit_your_account_information": "Edit your account information",
+        "orders": "orders",
+        "orders2": "orders",
+        "placed_in_past_months": "placed in past months",
+        "no_orders_yet": "No orders yet",
+        "make_your_first_order": "make your first order",
+        "order_number": "order",
+        "view_details": "View details",
+        "order_placed": "order placed",
+        "total": "total",
+        "ship_to": "ship to",
+        "phone": "phone",
+        "order_items": "order items",
+        "order_track": "order track"
+    },
+    "cart": {
+        "title": "shopping cart",
+        "subtotal": "Subtotal",
+        "empty_cart_msg": "Your cart is currently empty.",
+        "tax": "Tax included. Shipping calculated at checkout"
+    },
+    "checkout": {
+        "title": "checkout",
+        "information": "information",
+        "shipping": "shipping",
+        "payment": "payment",
+        "subtotal": "Subtotal",
+        "total": "Total",
+        "show_order_summary": "show order summary",
+        "hide_order_summary": "hide order summary",
+        "contact": "contact",
+        "ship_to": "Ship to",
+        "contact_information": "Contact information",
+        "email": "Email",
+        "shipping_addres": "Shipping address",
+        "primary_address": "set it as a primary address",
+        "shipping_method": "Shipping method",
+        "basic_shipping": "basic shipping",
+        "free": "free",
+        "Premium_shipping": "Premium shipping with tracking",
+        "choose_payment_method": "Choose payment method",
+        "pay_with": "pay with",
+        "or": "Or",
+        "enter_your_Credit_Card_details": "enter your Credit Card details",
+        "Your_transaction_is_secured_with_ssl_certificate": "Your transaction is secured with ssl certificate",
+        "you_will_pay": "you will pay",
+        "oredr_total": "Oredr Total",
+        "pay_with_cash": "pay with cash",
+        "pay_with_cash_content": "place order now and pay cash later!",
+        "return_to_information": "Return to information",
+        "continue_to_payment": "Continue to payment",
+        "return_to_cart": "Return to cart",
+        "continue_to_shipping": "Continue to shipping",
+        "return_to_shipping": "Return to shipping",
+        "complete_order": "Complete order"
+    },
+    "notFound": {
+        "404_title": "Sorry, page not found!",
+        "404_desc": "Sorry, we couldn’t find the page you’re looking for. Perhaps you’ve mistyped the URL? Be sure to check your spelling.",
+        "404_button": "Back to homepage"
     }
 }
