--- a/src/locale/ar.json
+++ b/src/locale/ar.json
@@ -207,6 +207,7 @@
         "shipping_method": "طريقة الشحن",
         "basic_shipping": "الشحن العادى",
         "free": "مجانى",
+        "change": "تغيير",
         "Premium_shipping": "الشحن الممتاز مع التتبع",
         "choose_payment_method": "اختر وسيلة الدفع",
         "pay_with": "ادفع بواسطة",
